--- a/Six.Wx/Six.Wx.Api/Six.Wx.Api.csproj
+++ b/Six.Wx/Six.Wx.Api/Six.Wx.Api.csproj
@@ -231,6 +231,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Controllers\FDY\" />
     <Folder Include="Controllers\Zbs\" />
     <Folder Include="Models\" />
   </ItemGroup>
