--- a/Six.Wx/Six.Wx.Api/Web.config
+++ b/Six.Wx/Six.Wx.Api/Web.config
@@ -15,7 +15,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="conStr" connectionString="server=169.254.246.56;user id=guest;password=88888888;database=egdatabase" providerName="System.Data.SqlClient"/>
+    <add name="conStr" connectionString="Persist Security Info=True;User ID=six;Unicode=True" providerName="Dapper"/>
   </connectionStrings>
   <system.webServer>
     <handlers>
