--- a/Six.Wx/Six.Wx.Model/Six.Wx.Model.csproj
+++ b/Six.Wx/Six.Wx.Model/Six.Wx.Model.csproj
@@ -45,7 +45,7 @@
     <Compile Include="BookEvaluation.cs" />
     <Compile Include="BooksSelect.cs" />
     <Compile Include="Browse.cs" />
-    <Compile Include="classification.cs" />
+    <Compile Include="Classification.cs" />
     <Compile Include="Content.cs" />
     <Compile Include="HotSearch.cs" />
     <Compile Include="Permission.cs" />
