--- a/Six.Wx/Six.Wx.IRepositoy/Six.Wx.IRepositoy.csproj
+++ b/Six.Wx/Six.Wx.IRepositoy/Six.Wx.IRepositoy.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Zbs\IBookRepositoy.cs" />
+    <Compile Include="Zbs\IZappointment.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Six.Wx.Model\Six.Wx.Model.csproj">
