单琦已购图书页

--- a/Iyby/project.config.json
+++ b/Iyby/project.config.json
@@ -13,8 +13,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.5.1",
-	"appid": "wx23c6e39841337a5b",
-	"projectname": "Iyby",
+	"appid": "wxb782b15a3c6e77d9",
+	"projectname": "niyby",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
