--- a/Iyby/project.config.json
+++ b/Iyby/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.5.1",
-	"appid": "wx79c0140e83ff0426",
+	"appid": "wx23c6e39841337a5b",
 	"projectname": "Iyby",
 	"debugOptions": {
 		"hidedInDevtools": []
