做的地址管理

--- a/Iyby/app.json
+++ b/Iyby/app.json
@@ -11,7 +11,8 @@
     "pages/sbuy/buy",
     "pages/qaddbooks/qaddbooks",
     "pages/qstartentering/startentering",
-    "pages/qaleadyentering/aleadyentering"
+    "pages/qaleadyentering/aleadyentering",
+    "pages/zoneaddress/oneaddress"
   ],
   "window": {
     "backgroundTextStyle": "light",
