--- a/Six.Wx/Six.Wx.Repositoy/Six.Wx.Repositoy.csproj
+++ b/Six.Wx/Six.Wx.Repositoy/Six.Wx.Repositoy.csproj
@@ -48,7 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Zbs\ZappointmentRespository.cs" />
+    <Compile Include="Zbs\ZAddressRepository.cs" />
+    <Compile Include="Zbs\ZappointmentRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Six.Wx.IRepositoy\Six.Wx.IRepositoy.csproj">
