--- a/Iyby/project.config.json
+++ b/Iyby/project.config.json
@@ -11,9 +11,9 @@
 		"newFeature": true,
 		"autoAudits": false
 	},
-	"compileType": "plugin",
+	"compileType": "miniprogram",
 	"libVersion": "2.5.1",
-	"appid": "wx23c6e39841337a5b",
+	"appid": "wx79c0140e83ff0426",
 	"projectname": "Iyby",
 	"debugOptions": {
 		"hidedInDevtools": []
