--- a/Six.Wx/Six.Wx.IRepositoy/Six.Wx.IRepositoy.csproj
+++ b/Six.Wx/Six.Wx.IRepositoy/Six.Wx.IRepositoy.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fdy\ISearchRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Zbs\IZAddressRepository.cs" />
     <Compile Include="Zbs\IZappointmentRepository.cs" />
@@ -53,7 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dq\" />
-    <Folder Include="Fdy\" />
     <Folder Include="Qxy\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
