--- a/Six.Wx/Six.Wx.Repositoy/Six.Wx.Repositoy.csproj
+++ b/Six.Wx/Six.Wx.Repositoy/Six.Wx.Repositoy.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fdy\SearchRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Zbs\ZAddressRepository.cs" />
     <Compile Include="Zbs\ZappointmentRepository.cs" />
@@ -63,7 +64,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dq\" />
-    <Folder Include="Fdy\" />
     <Folder Include="Qxy\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
