--- a/Six.Wx/Six.Wx.IRepositoy/Six.Wx.IRepositoy.csproj
+++ b/Six.Wx/Six.Wx.IRepositoy/Six.Wx.IRepositoy.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Fdy\ISearchRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Qxy\IAddBooksRepository.cs" />
     <Compile Include="Zbs\IZAddressRepository.cs" />
     <Compile Include="Zbs\IZappointmentRepository.cs" />
   </ItemGroup>
@@ -54,7 +55,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dq\" />
-    <Folder Include="Qxy\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
