--- a/Six.Wx/Six.Wx.Repositoy/Six.Wx.Repositoy.csproj
+++ b/Six.Wx/Six.Wx.Repositoy/Six.Wx.Repositoy.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Fdy\SearchRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Qxy\AddBooksRepository.cs" />
     <Compile Include="Zbs\ZAddressRepository.cs" />
     <Compile Include="Zbs\ZappointmentRepository.cs" />
   </ItemGroup>
@@ -64,7 +65,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dq\" />
-    <Folder Include="Qxy\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
