单琦已购页面代码

--- a/Iyby/project.config.json
+++ b/Iyby/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.5.1",
-	"appid": "wxee375ce66b8e916a",
+	"appid": "wxce31a61753b62f32",
 	"projectname": "Iyby",
 	"debugOptions": {
 		"hidedInDevtools": []
