--- a/Six.Wx/Six.Wx.IRepositoy/Six.Wx.IRepositoy.csproj
+++ b/Six.Wx/Six.Wx.IRepositoy/Six.Wx.IRepositoy.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Dq\ISappointmentRepository.cs" />
     <Compile Include="Fdy\ISearchRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Qxy\IAddBooksRepository.cs" />
     <Compile Include="Zbs\IZAddressRepository.cs" />
     <Compile Include="Zbs\IZappointmentRepository.cs" />
   </ItemGroup>
@@ -53,8 +54,6 @@
       <Name>Six.Wx.Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Qxy\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
