--- a/Six.Wx/Six.Wx.Repositoy/Six.Wx.Repositoy.csproj
+++ b/Six.Wx/Six.Wx.Repositoy/Six.Wx.Repositoy.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Dq\SappointmentRepository.cs" />
     <Compile Include="Fdy\SearchRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Qxy\AddBooksRepository.cs" />
     <Compile Include="Zbs\ZAddressRepository.cs" />
     <Compile Include="Zbs\ZappointmentRepository.cs" />
   </ItemGroup>
@@ -63,8 +64,6 @@
       <Name>Six.Wx.Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Qxy\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
