--- a/Six.Wx/Six.Wx.Api/Web.config
+++ b/Six.Wx/Six.Wx.Api/Web.config
@@ -15,7 +15,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="conStr" connectionString="Data Source=orcl;User ID=six;Password=123" providerName="Dapper"/>    
+    <add name="conStr" connectionString="Data Source=orcl;User ID=six;Password=123; Max Pool Size=100;" providerName="Dapper"/>    
   </connectionStrings>
   <system.webServer>
     <!--跨域请求：三个配置信息-->
