封装config配置信息

--- a/Six.Wx/Six.Wx.Api/Web.config
+++ b/Six.Wx/Six.Wx.Api/Web.config
@@ -4,19 +4,16 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <appSettings configSource="AppSettings.config">
+    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="conStr" connectionString="Data Source=orcl;User ID=six;Password=123; Max Pool Size=100;" providerName="Dapper"/>
-  </connectionStrings>
+  </connectionStrings>-->
   <system.webServer>
     <!--跨域请求：三个配置信息-->
     <httpProtocol>
