--- a/Six.Wx/Six.Wx.Api/AppSettings.config
+++ b/Six.Wx/Six.Wx.Api/AppSettings.config
@@ -5,4 +5,10 @@
   <add key="ClientValidationEnabled" value="true" />
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="conStr" value="Data Source=orcl;User ID=six;Password=123; Max Pool Size=100;" />
+
+
+  <!--Redis服务器地址-->
+  <add key="RedisServiceUrl" value="127.0.0.1"/>
+  <add key="RedisServicePortNum" value="6379"/>
+  
 </appSettings>
