--- a/Six.Wx/Six.Wx.Api/packages.config
+++ b/Six.Wx/Six.Wx.Api/packages.config
@@ -27,6 +27,24 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Pipelines.Sockets.Unofficial" version="1.0.7" targetFramework="net461" />
+  <package id="Redis" version="1.0.3" targetFramework="net461" />
+  <package id="ServiceStack" version="5.4.0" targetFramework="net461" />
+  <package id="ServiceStack.Client" version="5.4.0" targetFramework="net461" />
+  <package id="ServiceStack.Common" version="5.4.0" targetFramework="net461" />
+  <package id="ServiceStack.Interfaces" version="5.4.0" targetFramework="net461" />
+  <package id="ServiceStack.Redis" version="4.0.62" targetFramework="net461" />
+  <package id="ServiceStack.Text" version="5.4.0" targetFramework="net461" />
+  <package id="StackExchange.Redis" version="2.0.519" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.Diagnostics.PerformanceCounter" version="4.5.0" targetFramework="net461" />
+  <package id="System.IO.Pipelines" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Channels" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
